# glplay

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile
cmake/toolchains/clang/: toolchain.cmake
data/primitive/: cube.vtx
lib/ezoptionparser/: ezOptionParser.hpp
src/: main.cpp  optionparser.cpp  optionparser.h
src/base/: gamethread.cpp  gamethread.h  thread.cpp  thread.h
src/engine/: engine.cpp  engine.h
src/renderer/: camera.cpp  camera.h  glframe.cpp  glframe.h  glmeshdata.cpp  glmeshdata.h  glmeshsource.cpp  glmeshsource.h  gloperation.cpp  gloperation.h  renderer.cpp  renderer.h  shaderprogram.cpp  shaderprogram.h  visualdata.cpp  visualdata.h
src/renderer/operations/: glopgeometryupload.cpp  glopgeometryupload.h  gloprender.cpp  gloprender.h  glopshaderbatchupload.cpp  glopshaderbatchupload.h  glopshaderprogramupload.cpp  glopshaderprogramupload.h  glopshaderupload.cpp  glopshaderupload.h  glopupload.cpp  glopupload.h
src/renderer/packets/: glcompile.cpp  glcompile.h  glcompilegeometry.cpp  glcompilegeometry.h  glcompileshader.cpp  glcompileshader.h  glpacket.cpp  glpacket.h  glrender.cpp  glrender.h
src/util/: blockingqueue.h  fileutils.cpp  fileutils.h  framecounter.cpp  framecounter.h  framelimiter.cpp  framelimiter.h
src/world/: futureprojection.cpp  futureprojection.h  projection.cpp  projection.h  rotations.cpp  rotations.h  space.cpp  space.h  world.cpp  world.h  worldcontainer.cpp  worldcontainer.h  worldobject.h
src/world/actions/: keypress.cpp  keypress.h  mousemove.cpp  mousemove.h  playermovement.cpp  playermovement.h  worldaction.cpp  worldaction.h
src/world/bases/: player.cpp  player.h  prop.cpp  prop.h
src/world/bases/components/: animatable.cpp  animatable.h  base.cpp  base.h  character.cpp  character.h  controllable.cpp  controllable.h  physical.cpp  physical.h  renderable.cpp  renderable.h
src/world/gamemodes/: sandbox.cpp  sandbox.h
src/world/objects/: emosquare.cpp  emosquare.h  playercamera.cpp  playercamera.h  sademosquare.cpp  sademosquare.h  worldobject.cpp  worldobject.h
src/world/objects/primitive/: cube.cpp  cube.h
src/world/planes/: sandboxworld.cpp  sandboxworld.h
